@@ -33,7 +33,6 @@ simple Clock plugin, replace the various functions with your own, and change the
 #include <sys/stat.h>
 #include <fcntl.h>
 #include <unistd.h>
-#include <libdaemon/daemon.h>
 
 #include <config.h>
 #include <g15daemon.h>
